--- a/resources/core/resources/views/layouts/core.templ.tmpl
+++ b/resources/core/resources/views/layouts/core.templ.tmpl
@@ -16,6 +16,7 @@ templ AppPage(params AppPageParams) {
 			<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
 			<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
 			<meta name="theme-color" content="#ffffff"/>
+      @vite()
 		</head>
 		<body
 			class={ params.Class, }
