Make Nix Module grab the current version of Templ

--- a/resources/nix/flake.nix.tmpl
+++ b/resources/nix/flake.nix.tmpl
@@ -5,7 +5,7 @@
 
     flake-utils.url = "github:numtide/flake-utils";
 
-    templ.url = "github:a-h/templ?ref=v0.2.598";
+    templ.url = "github:a-h/templ?ref={{ .TmplVersion }}";
 
     gitignore = {
       url = "github:hercules-ci/gitignore.nix";
