--- a/resources/nix/flake.nix.tmpl
+++ b/resources/nix/flake.nix.tmpl
@@ -14,7 +14,6 @@
   };
 
   outputs = inputs @ {
-    self,
     nixpkgs,
     gitignore,
     flake-utils,
@@ -26,12 +25,10 @@
       };
       templ = inputs.templ.packages.${system}.templ;
 
-      pnpmUtils = (import ./nix/helpers/fetch-pnpm-deps) pkgs;
-
       esbuild = (import ./nix/helpers/esbuild) pkgs;
     in {
       packages = {
-        default = pkgs.buildGo122Module rec {
+        default = pkgs.buildGo123Module rec {
           pname = "my-package";
           version = "1.0.0";
           src = gitignore.lib.gitignoreSource ./.;
@@ -41,18 +38,18 @@
 
           buildInputs = with pkgs; [
             pkg-config
-            gcc
-            glibc.static
           ];
 
           nativeBuildInputs = [
             templ
+            pkgs.nodejs
             pkgs.nodePackages.pnpm
-            pnpmUtils.pnpmConfigHook
+            pkgs.nodePackages.pnpm.configHook
           ];
 
-          pnpmDeps = pnpmUtils.fetchPnpmDeps {
-            inherit src pname;
+          pnpmDeps = pkgs.nodePackages.pnpm.fetchDeps {
+            inherit src;
+            pname = "pnpm";
             hash = "";
           };
 
@@ -66,7 +63,6 @@
           ldflags = [
             "-s"
             "-w"
-            "-extldflags -static"
           ];
 
           ESBUILD_BINARY_PATH = "${esbuild.path}";
@@ -87,11 +83,11 @@
       };
 
       devShell = pkgs.mkShell {
-        GOROOT = "${pkgs.go_1_22}/share/go";
+        GOROOT = "${pkgs.go_1_23}/share/go";
 
         buildInputs = with pkgs; [
-          (golangci-lint.override {buildGoModule = buildGo122Module;})
-          go_1_22
+          (golangci-lint.override {buildGo123Module = buildGo123Module;})
+          go_1_23
           air
           templ
           (go-migrate.overrideAttrs (finalAttrs: previousAttrs: {
