Update vite version and other JS packages

--- a/resources/core/Makefile.tmpl
+++ b/resources/core/Makefile.tmpl
@@ -19,7 +19,7 @@ build:
 build-server-prepare:
 	templ generate
 	pnpm vite build
-	mv ${DEST}/public/assets/manifest.json ./internal/middlewares/manifest.json
+	mv ${DEST}/public/assets/.vite/manifest.json ./internal/middlewares/manifest.json
 	cp -r ./public ${DEST}/
 
 build-server: build-server-prepare
