--- a/resources/core/tailwind.config.ts.tmpl
+++ b/resources/core/tailwind.config.ts.tmpl
@@ -2,7 +2,7 @@ import type { Config } from "tailwindcss";
 import { iconsPlugin, getIconCollections } from "@egoist/tailwindcss-icons";
 
 export default {
-  content: ["./resources/**/*.templ", "./resources/**/*.ts"],
+  content: ["./resources/views/**/*.templ", "./resources/scripts/**/*.ts"],
   theme: {
     extend: {
       borderWidth: {
