--- a/resources/nix/flake.nix.tmpl
+++ b/resources/nix/flake.nix.tmpl
@@ -28,13 +28,13 @@
       esbuild = (import ./nix/helpers/esbuild) pkgs;
     in {
       packages = {
-        default = pkgs.buildGo123Module rec {
+        default = pkgs.buildGoModule rec {
           pname = "my-package";
           version = "1.0.0";
           src = gitignore.lib.gitignoreSource ./.;
           subPackages = ["cmd/server"];
           vendorHash = "";
-          CGO_ENABLED = 1;
+          env.CGO_ENABLED = 1;
 
           buildInputs = with pkgs; [
             pkg-config
@@ -83,11 +83,11 @@
       };
 
       devShell = pkgs.mkShell {
-        GOROOT = "${pkgs.go_1_23}/share/go";
+        GOROOT = "${pkgs.go}/share/go";
 
         buildInputs = with pkgs; [
-          (golangci-lint.override {buildGo123Module = buildGo123Module;})
-          go_1_23
+          golangci-lint
+          go
           air
           templ
           (go-migrate.overrideAttrs (finalAttrs: previousAttrs: {
