--- a/resources/core/package.json.tmpl
+++ b/resources/core/package.json.tmpl
@@ -3,7 +3,7 @@
   "private": true,
   "description": "",
   "scripts": {
-    "lint": "eslint . --config ./.eslintrc.cjs --ext .js,.ts,.tsx",
+    "lint": "eslint . --config ./eslint.config.mjs",
     "typechecks": "tsc --noEmit"
   },
   "type": "module",
@@ -12,20 +12,23 @@
   "prettier": "./prettier.config.js",
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.9.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
     "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/vite": "^4.0.6",
-    "@types/node": "^20.11.20",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "htmx.org": "^2.0.3",
-    "postcss": "^8.4.45",
+    "@types/node": "^22.13.4",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "globals": "^15.15.0",
+    "htmx.org": "^2.0.4",
+    "postcss": "^8.5.2",
     "postcss-cli": "^11.0.0",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.9",
+    "prettier": "^3.5.1",
+    "tailwindcss": "^4.0.6",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
     "vite-plugin-full-reload": "^1.2.0"
   }
 }
