--- a/resources/core/internalcore/routes/handle_http_error.go.tmpl
+++ b/resources/core/internalcore/routes/handle_http_error.go.tmpl
@@ -6,7 +6,7 @@ import (
 	"net/http"
 	"strconv"
 
-	"{{.ProjectName}}/internal/entities"
+	"{{.ProjectName}}/internal/layers/domain/entities"
 	"{{.ProjectName}}/internal/logger"
 
 	errors_page "{{.ProjectName}}/resources/views/pages/errors"
