--- a/resources/core/internalcore/routes/routes.go.tmpl
+++ b/resources/core/internalcore/routes/routes.go.tmpl
@@ -6,10 +6,11 @@ import (
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
 
+	"{{.ProjectName}}/internal"
 	"{{.ProjectName}}/internal/middlewares"
 )
 
-func MainRouter() http.Handler {
+func MainRouter(c internal.Container) http.Handler {
 	router := chi.NewRouter()
 
 	router.Use(middleware.StripSlashes)
@@ -24,7 +25,7 @@ func MainRouter() http.Handler {
 
 	router.NotFound(HandleNotFoundPage)
 
-	router.Mount("/", IndexRouter())
+	router.Mount("/", IndexRouter(c))
 
 	return router
 }
