Make sure build directory exist for the debug public link directory

--- a/resources/core/Makefile.tmpl
+++ b/resources/core/Makefile.tmpl
@@ -28,6 +28,7 @@ build-server: build-server-prepare
 debug:
 	templ generate
 	rm -rf ./build/public
+	mkdir -p ./build
 	ln -s ../public/ ./build/public
 	$(GO) build -tags debug -o ${DEST}$(SERVER_BINARY) ./cmd/server/.
 
