--- a/resources/core/Makefile.tmpl
+++ b/resources/core/Makefile.tmpl
@@ -29,6 +29,7 @@ debug:
 	templ generate
 	rm -rf ./build/public
 	mkdir -p ./build
+	rm -rf ./build/public
 	ln -s ../public/ ./build/public
 	$(GO) build -tags debug -o ${DEST}$(SERVER_BINARY) ./cmd/server/.
 
