--- a/resources/core/.air.toml.tmpl
+++ b/resources/core/.air.toml.tmpl
@@ -32,7 +32,7 @@ tmp_dir = "tmp"
   rerun = false
   rerun_delay = 0
   send_interrupt = true
-  kill_delay = 0 # ms
+  kill_delay = "0s"
   stop_on_error = true
 
 [color]
