Remove watchexec for gonova version in makefile and just name the command `watchexec`

--- a/resources/core/Makefile.tmpl
+++ b/resources/core/Makefile.tmpl
@@ -42,7 +42,7 @@ dev:
 	${MAKE} -j2 watchGo watchVite
 
 watchGo:
-	gonova watcher watchexec \
+	gonova watchexec \
     --templ-dev-mode \
     -i "assets" \
     -i "build" \
